Using Babel entirely no `tsc`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,7 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "declaration": true,
     "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true,
-    "strict": true,
-    "outDir": "dist"
+    "strict": true
   }
 }
