--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-transform-typescript": "^7.10.5",
     "@types/babel-plugin-macros": "^2.8.2",
     "@types/common-tags": "^1.8.0",
-    "@types/cssbeautify": "^0.3.1"
+    "@types/cssbeautify": "^0.3.1",
+    "@types/node": "^14.0.24"
   }
 }
