--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "@types/babel-plugin-macros": "^2.8.2",
     "@types/common-tags": "^1.8.0",
     "@types/cssbeautify": "^0.3.1",
-    "@types/node": "^14.0.24"
+    "@types/node": "^14.0.24",
+    "@types/stylis": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "^7.5.0",
+    "typescript": "^3.9.7"
   }
 }
