--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "babel-plugin-macros": "^2.8.0",
     "common-tags": "^1.8.0",
     "cssbeautify": "^0.3.1",
-    "stylis": "^4.0.2"
+    "stylis": "^4.0.2",
+    "styletakeout.macro": "file:."
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
