Failing at a React-setState style decl setting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -142,6 +142,7 @@
     "no-trailing-spaces": "error",
     // Switch this as needed, otherwise too much noise
     "no-unused-vars": "off",
+    "no-unused-labels": "off",
     "no-useless-concat": "error",
     "object-curly-spacing": [
       "error",
