--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
     "babel-plugin-macros": "^2.8.0",
     "common-tags": "^1.8.0",
     "cssbeautify": "^0.3.1",
-    "stylis": "^4.0.2",
-    "styletakeout.macro": "file:."
+    "stylis": "^4.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.11.0",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@babel/plugin-transform-typescript": "^7.10.5",
+    "@babel/plugin-transform-typescript": "^7.11.0",
     "@types/babel-plugin-macros": "^2.8.2",
     "@types/common-tags": "^1.8.0",
     "@types/cssbeautify": "^0.3.1",
-    "@types/node": "^14.0.24",
+    "@types/node": "^14.0.27",
     "@types/stylis": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "eslint": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
+    "styletakeout.macro": "file:.",
     "typescript": "^3.9.7"
   }
 }
